--- a/views/partials/navbar.handlebars
+++ b/views/partials/navbar.handlebars
@@ -12,6 +12,10 @@
                 <li class="nav-item">
                     <a class="nav-link active" aria-current="page" href="#">Home</a>
                 </li>
+
+                <li>
+                    <a href="/posts/new" class="nav-link">New Post</a>
+                </li>
             </ul>
 
             <form class="d-flex">
