Users can see individual posts

--- a/views/posts-index.handlebars
+++ b/views/posts-index.handlebars
@@ -12,7 +12,7 @@
     <ul class="list-group">
         {{#each posts}}
             <li class="list-group-item">
-                <div class="lead">{{this.title}}</div>
+                <div class="lead"><a href="/posts/{{this._id}}">{{this.title}}</a></div>
                 {{!-- <small>Last Updated:{{this.createdAtFormatted}}</small> --}}
                 <a href="{{this.url}}" target="_blank">{{this.url}}</a>
             </li>
