--- a/views/posts-new.handlebars
+++ b/views/posts-new.handlebars
@@ -33,6 +33,10 @@
                 <label for="post-summary" class="form-label">Summary</label>
                 <textarea name="summary" class="form-control" id="post-summary" placeholder="Summary" ></textarea>
             </div>
+            <div class="mb-3 form-group">
+                <label for="post-subreddit" class="form-label">Subreddit</label>
+                <input name="subreddit" type="text" class="form-control" id="post-subreddit" placeholder="Subreddit">
+            </div>
             <div class="text-right">
                 <button type="submit" class="btn btn-primary">Create Post</button>
             </div>
