--- a/views/posts-show.handlebars
+++ b/views/posts-show.handlebars
@@ -3,8 +3,22 @@
 
 <div class="row">
     <div class="col-sm-6 offset-sm-3">
-        <a href="{{post.url}}" class="lead"><h2>{{post.title}}</h2></a>
+        <a href="{{post.url}}" class="lead">{{post.title}}</a>
         <small>{{post.createdAtFormatted}}</small>
         <p>{{post.summary}}</p>
+        
+        <form action="/posts/{{post._id}}/comments" method="post">
+            <textarea class='form-control mb-3' name="content" placeholder="Comment"></textarea>
+            <div class="text-right mb-3">
+                <button type="submit" class="btn btn-primary">Save</button>
+            </div>
+        </form>
+        <ul class="list-group list-group-flush">
+            {{#each post.comments}}
+                <li class="list-group-item">
+                    <p>{{this.content}}</p>
+                </li>
+            {{/each}}
+        </ul>
     </div>
 </div>
