--- a/views/partials/navbar.handlebars
+++ b/views/partials/navbar.handlebars
@@ -12,10 +12,11 @@
                 <li class="nav-item">
                     <a class="nav-link active" aria-current="page" href="/">Home</a>
                 </li>
-
-                <li>
-                    <a href="/posts/new" class="nav-link">New Post</a>
-                </li>
+                {{#if currentUser}}
+                    <li>
+                        <a href="/posts/new" class="nav-link">New Post</a>
+                    </li>
+                {{/if}}
             </ul>
 
             <form class="d-flex">
@@ -24,16 +25,18 @@
             </form>
             
             <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
-                <li class="nav-item">
-                    <a class="nav-link" href="/logout">Logout</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="/login">Login</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="/sign-up">Sign Up</a>
-                </li>
-
+                {{#if currentUser}}
+                    <li class="nav-item">
+                        <a class="nav-link" href="/logout">Logout</a>
+                    </li>
+                {{else}}
+                    <li class="nav-item">
+                        <a class="nav-link" href="/login">Login</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="/sign-up">Sign Up</a>
+                    </li>
+                {{/if}}
                 <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                         Dropdown
