--- a/views/posts-new.handlebars
+++ b/views/posts-new.handlebars
@@ -16,6 +16,7 @@
     </div>
     <button type="submit" class="btn btn-primary">Submit</button>
 </form> --}}
+<a href="/"> ← Back to Home</a>
 
 <div class="row">
     <div class="col-sm-4 offset-sm-4">
