--- a/views/posts-index.handlebars
+++ b/views/posts-index.handlebars
@@ -3,18 +3,13 @@
 
 <div class="row">
   <div class="col-sm-8 offset-sm-2">
-    {{!-- {{#each posts}}
-        <a href="{{this.url}}"><h4>{{this.title}}</h4></a>
-        
-        <p>{{this.summary}}</p>
-    {{/each}} --}}
-
     <ul class="list-group">
         {{#each posts}}
             <li class="list-group-item">
                 <div class="lead"><a href="/posts/{{this._id}}">{{this.title}}</a></div>
                 {{!-- <small>Last Updated:{{this.createdAtFormatted}}</small> --}}
                 <a href="{{this.url}}" target="_blank">{{this.url}}</a>
+                <div><small>{{this.author.username}}</small></div>
                 <div class="d-flex">
                     <a href="/n/{{this.subreddit}}" class="ms-auto">{{this.subreddit}}</a>
                 </div>
