--- a/views/posts-show.handlebars
+++ b/views/posts-show.handlebars
@@ -5,6 +5,7 @@
     <div class="col-sm-6 offset-sm-3">
         <a href="{{post.url}}" class="lead">{{post.title}}</a>
         <small>{{post.createdAtFormatted}}</small>
+        <p>{{post.author.username}}</p>
         <p>{{post.summary}}</p>
         
         <form action="/posts/{{post._id}}/comments" method="post">
