--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -4,8 +4,13 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Reddit.js</title>
+    {{!-- FontAwesome --}}
+    <script src="https://kit.fontawesome.com/7533af764e.js" crossorigin="anonymous"></script>
+    {{!-- Custom Styles --}}
+    <link rel="stylesheet" href="/styles/styles.css">
     {{!-- Bootstrap CSS --}}
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
+    
 </head>
 <body>
 
