--- a/views/partials/navbar.handlebars
+++ b/views/partials/navbar.handlebars
@@ -2,7 +2,7 @@
 
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
     <div class="container-fluid">
-        <a class="navbar-brand" href="/">Reddit.js</a>
+        <a class="navbar-brand" href="/" id="ahhhhh">Reddit.js</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
@@ -29,6 +29,18 @@
                     <li class="nav-item">
                         <a class="nav-link" href="/logout">Logout</a>
                     </li>
+                    <li>
+                        <div class="btn-group">
+                            <button type="button" class="btn btn-secondary dropdown-toggle" data-bs-toggle="dropdown" data-bs-display="static" aria-expanded="false">
+                                User
+                            </button>
+                            <ul class="dropdown-menu dropdown-menu-start dropdown-menu-sm-end">
+                                <li><button class="dropdown-item" type="button"><a href="/users/{{currentUser.username}}">Your Profile</a></button></li>
+                                <li><button class="dropdown-item" type="button">Another action</button></li>
+                                <li><button class="dropdown-item" type="button">Something else here</button></li>
+                            </ul>
+                        </div>
+                    </li>
                 {{else}}
                     <li class="nav-item">
                         <a class="nav-link" href="/login">Login</a>
@@ -37,19 +49,9 @@
                         <a class="nav-link" href="/sign-up">Sign Up</a>
                     </li>
                 {{/if}}
-                <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                        Dropdown
-                    </a>
-                    <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                        <li><a class="dropdown-item" href="#">Action</a></li>
-                        <li><a class="dropdown-item" href="#">Another action</a></li>
-                        <li><hr class="dropdown-divider"></li>
-                        <li><a class="dropdown-item" href="#">Something else here</a></li>
-                    </ul>
-                </li>
             </ul>
         
         </div>
     </div>
 </nav>
+{{!-- ### left align --}}
