refactored populate code

--- a/views/posts-show.handlebars
+++ b/views/posts-show.handlebars
@@ -20,7 +20,7 @@
                 <li class="list-group-item">
                     <p>{{this.content}}</p>
                     <div class="d-flex">
-                        <p class="ms-auto"><a href="/users/{{post.author.username}}">{{this.author.username}}</a></p>
+                        <p class="ms-auto"><a href="/users/{{this.author.username}}">{{this.author.username}}</a></p>
                     </div>
                 </li>
             {{/each}}
