--- a/views/posts-show.handlebars
+++ b/views/posts-show.handlebars
@@ -18,10 +18,7 @@
         <ul class="list-group list-group-flush">
             {{#each post.comments}}
                 <li class="list-group-item">
-                    <p>{{this.content}}</p>
-                    <div class="d-flex">
-                        <p class="ms-auto"><a href="/users/{{this.author.username}}">{{this.author.username}}</a></p>
-                    </div>
+                    {{> comment comment=this postId=../post._id}}
                 </li>
             {{/each}}
         </ul>
