Users can now vote on posts

--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -1,8 +1,8 @@
 @import url('.../node_modules/font-awesome/css/font-awesome.min.css');
 
-/* #ahhhhh {
-    color: red;
-} */
+#ahhhhh {
+    color: tomato;
+}
 
 .comment-indent {
     margin-left: 20px;
