--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -22,5 +22,11 @@
     
     {{!-- Bootstrap JS --}}
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
+    {{!-- jQuery script --}}
+    <script src="https://code.jquery.com/jquery-3.3.1.min.js" 
+    integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
+    crossorigin="anonymous"></script>
+    {{!-- custom script for ajax --}}
+    <script rel="script" src="/javascript/posts.js"></script>
 </body>
 </html>
