--- a/views/users-show.handlebars
+++ b/views/users-show.handlebars
@@ -1,7 +1,7 @@
 <!-- views/user-show.handlebars -->
 
 <div class="text-center my-4">
-    <h1>{{user.username}}'s Profile</h1>
+    <h1>{{this_user.username}}'s Profile</h1>
 </div>
 
 <div class="row mt-5">
